2012-10-26 Franz Holzinger  <franz@ttproducts.de>
	* replace auto_login_key from dataArray into its own variable

2012-10-22 Franz Holzinger  <franz@ttproducts.de>
	* restructuring

2012-10-18 Franz Holzinger  <franz@ttproducts.de>
	* Fix bug: Do not continue if the saving of the user data went wrong

2012-10-15 Franz Holzinger  <franz@ttproducts.de>
	* new feature: house_no which contains the house number for the given street

2012-10-10 Franz Holzinger  <franz@ttproducts.de>
	* Fix bug #35796: you must add the server timezone in seconds after the usage of mktime if the server time is set (serverTimeZone)

2012-10-03 Franz Holzinger  <franz@ttproducts.de>
	* return a boolean FALSE in decryptPasswordForAutoLogin if there is a problem with the rsaauth backend decryption
	* do not require rsaauth to be installed

2012-10-02 Franz Holzinger  <franz@ttproducts.de>
	* return a boolean FALSE if there is a problem with the saltedpasswords
	* do not require saltedpasswords to be installed

2012-09-11 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #40812: wrong usage of sprintf when locallang wants to report a text which is not replaced by div2007

2012-07-11 Franz Holzinger  <franz@ttproducts.de>
	* fix bug with captcha: The subpart marker ###SUB_ERROR_FIELD_captcha_response### for the field captcha_response has not been generated.

2012-05-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #36838: FE user password saved in BE is displayed in plaintext
	* Version 3.0.1

2012-04-28 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Remove middle_name from default setup
	* Move some functions to tx_srfeuserregister_display
	* Update to manual
	* Add label evalErrors_uniqueLocal_email_informal
	* Version 3.0.0

2012-04-27 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Require div2007 0.10.1
	* Fix bug #36675: Query parameter cmd is not honoured
	* Fix bug #36526: authCode is not compatible with standard authentication code